# enola

./: .bazel-steward.yaml  .bazelignore  .bazelproject  .bazelrc  .clang-format  .deepsource.toml  .editorconfig  .envrc  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pip-install.hash.txt  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .protolint.yaml  .renovaterc.json5  .shellcheckrc  .tool-versions  .yamllint.yaml  AGENTS.md  AUTHORS  BUILD  BUILD.bazel  CITATION.cff  Dockerfile  Dockerfile-DevEnv  Dockerfile-nix  GEMINI.md  LICENSE-header.txt  MODULE.bazel  MODULE.bazel.handlebars  MODULE.bom.handlebars.yaml  MODULE.update.bash  NOTICE  README.md  SECURITY.md  ToDo.md  ToDo.txt  ToDo.yaml  (+20 more)
common/markdown/: BUILD  BUILD.bazel
common/protobuf/: BUILD  BUILD.bazel  test.proto
common/protobuf/src/main/java/dev/enola/common/protobuf/: AbstractProtoTest.java  Anys.java  DescriptorProvider.java  DescriptorRegistry.java  MessageResourceConverter.java  MessageValidator.java  MessageValidators.java  Messages.java  ProtoIO.java  Timestamps2.java  TypeRegistryDescriptorProvider.java  TypeRegistryWrapper.java  ValidationException.java  Wany.java  YamlJsonResourceConverter.java
common/protobuf/src/main/proto/: validation.proto
common/protobuf/src/test/java/dev/enola/common/protobuf/: AbstractProtoTestBase.java  AnysTest.java  MessageValidatorTest.java  ProtoIOTest.java  TypeRegistryWrapperTest.java
common/protobuf/src/test/resources/: nok.textproto  ok.textproto
connectors/demo/: BUILD  BUILD.bazel  BUILD.disabled  README.md
connectors/demo/src/main/java/dev/enola/demo/: DemoConnector.java  DemoService.java  Server.java  demo_data.proto
connectors/demo/src/main/resources/: demo-connector-model.textproto  demo-model.textproto  demo.textproto
connectors/demo/src/main/resources/dev/enola/demo/: bar-abc-def.textproto  demo-model.enola.yaml  demo-model.md  demo-model.textproto  foo-abc.textproto
connectors/demo/src/test/java/dev/enola/demo/: ModelTest.java  ServerTest.java
connectors/demo/src/test/resources/: demo-model-docgen.md
connectors/k8s/: BUILD.bazel  BUILD.disabled  README.md
connectors/k8s/src/main/java/dev/enola/k8s/: Bek.java
core/impl/: BUILD  BUILD.bazel
core/impl/src/main/java/dev/enola/core/: EnolaServiceProvider.java  EnolaServiceRegistry.java  EntityAspect.java  EntityAspectRepeater.java  EntityAspectService.java  Repository.java  RepositoryBuilder.java
core/impl/src/main/java/dev/enola/core/aspects/: ErrorTestAspect.java  FilestoreRepositoryAspect.java  GrpcAspect.java  TimestampAspect.java  UriTemplateAspect.java  ValidationAspect.java
core/impl/src/main/java/dev/enola/core/docgen/: GraphvizGenerator.java  MarkdownDocGenerator.java  MermaidGenerator.java  Options.java  SoyGenerator.java  StringUtil.java
core/impl/src/main/java/dev/enola/core/entity/: IDValueConverter.java
core/impl/src/main/java/dev/enola/core/grpc/: EnolaGrpcClientProvider.java  EnolaGrpcInProcess.java  EnolaGrpcServer.java  EnolaGrpcService.java  ServiceProvider.java
core/impl/src/main/java/dev/enola/core/iri/: URITemplateMatcherChain.java  URITemplatePatternizer.java  URITemplateSplitter.java
core/impl/src/main/java/dev/enola/core/message/: ProtoEnumValueToThingConnector.java  ProtoFieldToThingConnector.java  ProtoMessageToThingConnector.java  ProtoToThingConnector.java
core/impl/src/main/java/dev/enola/core/meta/: EntityAspectWithRepository.java  EntityKindAspect.java  EntityKindRepository.java  EntityKindValidations.java  SchemaAspect.java  TypeRegistryWrapper.java
core/impl/src/main/java/dev/enola/core/resource/: ResourceEnolaService.java
core/impl/src/main/java/dev/enola/core/rosetta/: RdfResourceIntoProtoThingConverter.java  ResourceIntoThingConverter.java  ResourceIntoThingResourceConverter.java  Rosetta.java
core/impl/src/main/java/dev/enola/core/tbd/: Rosetta.java
core/impl/src/main/java/dev/enola/core/thing/: EmptyThingRepository.java  ListThingService.java  ThingConnector.java  ThingConnectorService.java  ThingConnectorsProvider.java  ThingRepositoryEnolaService.java  ThingRepositoryThingService.java  ThingService.java
core/impl/src/main/java/dev/enola/core/type/: ProtoService.java  TypeRepositoryBuilder.java  TypeTypeProvider.java
core/impl/src/main/resources/: schema.textproto
core/impl/src/test/java/dev/enola/core/: EntityServiceProviderTest.java  EntityTest.java  ValidationFailureAspect.java
core/impl/src/test/resources/: bar-abc-def.textproto  bar-abc-def.yaml  demo-model-docgen-goal.md  demo-model-docgen.md  demo-model.textproto  demo-model.yaml  foo-abc.textproto  picasso.ttl  test-types.yaml
core/lib/: BUILD  BUILD.bazel
core/lib/src/main/java/dev/enola/core/: ERI.java  EnolaException.java  EnolaService.java  EntityIO.java  IDs.java  URIs.java  enola_core.proto  enola_ext.proto
core/lib/src/test/java/dev/enola/core/: ByteSeqTest.java  ERITest.java  IDsTest.java  URIsTest.java
core/lib/src/test/proto/: enola_test.proto
core/proto/: BUILD.bazel  enola-core.proto  enola_core.proto  enola_model.proto
core/proto/dev/enola/core/proto/: enola_core.proto  enola_model.proto
core/proto/dev/enola/core/proto/meta/: enola_meta.proto
core/proto/dev/enola/core/proto/util/: enola_util.proto
gui/: BUILD.bazel
gui/src/main/java/dev/: AggregationMethod.java  CellData.java  ColumnDescriptor.java  EnolaGui.java  EnolaListview.java  EnolaListviewGroup.java  EnolaListviewParameters.java  Triplet.java
gui/src/main/java/dev/enola/gui/: AggregationMethod.java  CellData.java  ColumnDescriptor.java  EnolaGui.java  EnolaListview.java  EnolaListviewParameters.java  EntityListview.java  Pair.java  Triplet.java
gui/src/main/resources/: switzerland-model2.textproto
tools/google-java-format-test/: BUILD.bazel
tools/proto/: BUILD.bazel
web/ui/: BUILD  BUILD.bazel
web/ui-go/: BUILD.bazel  Makefile  enola.go  go.mod  main.go  main_test.go
web/ui-go/web/: page.template
web/ui/src/main/resources/: ui.soy
web/ui/src/main/resources/static/: 404.html  main.css
web/ui/src/main/resources/templates/: index.html
(+2515 files in other folders)
