# https://github.com/aignas/rules_shellcheck
load("@com_github_aignas_rules_shellcheck//:def.bzl", "shellcheck_test")

shellcheck_test(
    name = "shellcheck_test",
    size = "small",
    data = glob(
        [
            "**/*.bash",
            "**/*.sh",
        ],
        exclude = [
            "bazel-bin/**",
            "bazel-out/**",
            ".venv/**"
        ],
    ),
    tags = ["lint"],
)
