# https://github.com/aignas/rules_shellcheck
load("@com_github_aignas_rules_shellcheck//:def.bzl", "shellcheck_test")

shellcheck_test(
    name = "shellcheck_test",
    size = "small",
    data = glob(
        [
            "**/*.bash",
            "**/*.sh",
        ],
        exclude = [
            "bazel-bin/**",
            "bazel-out/**",
            ".venv/**",
        ],
    ),
    tags = ["lint"],
)

# java_test(
#    name = "google-java-format",
#    srcs = ["tools/google-java-format-test/src/test/java/dev/enola/tools/test/GoogleJavaFormatTest.java"],
#    deps = ["@maven//:com_google_googlejavaformat_google_java_format"],
# )
